sensors are now dynamically loaded from the class names defined in res/values/sensors.xml